force-app/main/default/objects/npsp__Allocations_Settings__c/npsp__Allocations_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the allocation of Opportunities into General Accounting Units.</description>
    <label>Configuración de asignaciones</label>
</CustomObject>