force-app/main/default/objects/npsp__Allocations_Settings__c/fields/npsp__Default__c.field-meta.xml
<CustomField>
    <fullName>npsp__Default__c</fullName>
    <description>Holds the ID of the default General Accounting Unit for creation of default allocations or for the allocation of non allocated amounts.</description>
    <inlineHelpText>Contiene el Id. de la cuenta contable general predeterminada para la creación predeterminada de asignaciones o para la asignación de importes no asignados.</inlineHelpText>
    <label>Default General Accounting Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>