force-app/main/default/objects/npsp__Allocations_Settings__c/fields/npsp__Payment_Allocations_Enabled__c.field-meta.xml
<CustomField>
    <fullName>npsp__Payment_Allocations_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Allocations can be set at the Payment level. If selected, you can manually create Allocation records for each Payment, or let NPSP automatically create Payment Allocation records based on the related Opportunity Allocation settings.</description>
    <inlineHelpText>Indica si las asignaciones pueden establecerse en el nivel de pago. Solo se utiliza con Accounting Subledger. Póngase en contacto con su Ejecutivo de cuenta de Salesforce para obtener más información.</inlineHelpText>
    <label>Payment Allocations Enabled</label>
    <type>Checkbox</type>
</CustomField>