force-app/main/default/objects/npsp__Allocations_Settings__c/fields/npsp__Use_Fiscal_Year_for_Rollups__c.field-meta.xml
<CustomField>
    <fullName>npsp__Use_Fiscal_Year_for_Rollups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will cause Allocation rollup totals to respect fiscal year, instead of calendar years settings. To set Fiscal Year information, go to Setup-&gt;Company Profile-&gt;Fiscal Year. NOTE: Custom Fiscal Year Settings are NOT supported.</description>
    <inlineHelpText>Esta casilla hace que los totales de las asignaciones respeten el año fiscal en vez del año calendario. Para establecer el año fiscal, vaya a Configuración -&gt; Perfil de la empresa -&gt; Año fiscal. NOTA: NO se admiten parámetros de año fiscal personalizados.</inlineHelpText>
    <label>Use Fiscal Year for Rollups</label>
    <type>Checkbox</type>
</CustomField>